# radiocam-linux

./: README.md
app/: plan.md
driver/: .Module.symvers.cmd  .modules.order.cmd  .radiocam.ko.cmd  .radiocam.mod.cmd  .radiocam.mod.o.cmd  .radiocam.o.cmd  Makefile  README.md  gp.sh  modules.order  radiocam.c  radiocam.h  radiocam.ko  radiocam.mod  radiocam.mod.c
dts/: Makefile  README.md  gp.sh  radiocam.dtbo  radiocam.dts
dts/scripts/: load_dtbo.sh  unload_dtbo.sh
lib/: CMakeLists.txt  Makefile  adc_config_test.c  camera.c  camera.h  capture_example.c  sdr.c  sdr.h  sdr_config.c  sdr_config.h  sdr_test  sdr_test.c  sdr_transfer.c  sdr_transfer.h
test/: Makefile  helloworld.c
